# Remixatron

./: .gitignore  README.md  Remixatron.py  documentation_consistency_rule.md  index.html  infinite_jukebox.py  requirements.txt
.agent/rules/: make-it-so.md
.agent/workflows/: bump-n-build.md
.github/workflows/: release.yml
Web UI/: README.md  Remixatron.py  cors.cfg  dockerfile  index.js  main.py  rebuildBeatmapCacheFromBookmarks.py  requirements.txt  xaa
Web UI/madmom.egg-info/: SOURCES.txt
Web UI/madmom/audio/: comb_filters.c
Web UI/madmom/features/: beats_crf.c
Web UI/madmom/madmom.egg-info/: PKG-INFO  requires.txt  top_level.txt
Web UI/madmom/madmom/models/: LICENSE  README.rst
Web UI/madmom/ml/: hmm.c
Web UI/madmom/ml/nn/: layers.c
Web UI/madmom/models/: __init__.py
Web UI/madmom/models/beats/2013/: beats_blstm_2.pkl  beats_blstm_4.pkl  beats_blstm_6.pkl  beats_blstm_8.pkl
Web UI/madmom/models/beats/2015/: beats_blstm_1.pkl  beats_blstm_2.pkl  beats_blstm_6.pkl  beats_blstm_8.pkl
Web UI/madmom/models/beats/2016/: beats_lstm_1.pkl  beats_lstm_3.pkl  beats_lstm_4.pkl  beats_lstm_5.pkl  beats_lstm_6.pkl  beats_lstm_7.pkl  beats_lstm_8.pkl
Web UI/madmom/models/beats/2019/: beats_tcn_1.pkl  beats_tcn_2.pkl  beats_tcn_3.pkl  beats_tcn_7.pkl
Web UI/madmom/models/chords/2016/: chords_cnncrf.pkl  chords_cnnfeat.pkl  chords_dccrf.pkl
Web UI/madmom/models/downbeats/2016/: downbeats_bgru_harmonic_0.pkl  downbeats_bgru_harmonic_1.pkl  downbeats_bgru_harmonic_2.pkl  downbeats_bgru_harmonic_3.pkl  downbeats_bgru_rhythmic_0.pkl  downbeats_bgru_rhythmic_1.pkl  downbeats_blstm_1.pkl  (+6 more)
Web UI/static/: index.html  index.js
remixatron-android/: Android_App_Implementation_Plan.md
rust-app/: .gitignore  BROADCAST.md  DSP.md  MelSpectrogram_Ultimate.onnx.data  README.md  USERS_MANUAL.md  check_error.txt  package-lock.json  package.json  verification_output.txt  verification_output_stay_with_me.txt  vite.config.js
rust-app/.antigravity/: PLAN.md  TASKS.md
rust-app/src/: LavaLampViz.js  MoodShader.js  README.md  index.html  main.js  styles.css  viz.js
rust-app/src-receiver/: index.html
rust-app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
rust-app/src-tauri/capabilities/: README.md  default.json
rust-app/src-tauri/icons/: README.md  icon.icns
rust-app/src-tauri/models/: MelSpectrogram_Ultimate.onnx
rust-app/src-tauri/src/: README.md  downloader.rs  favorites.rs  lib.rs  main.rs  playback_engine.rs  workflow.rs
rust-app/src-tauri/src/analysis/: README.md  cqt.rs  features.rs  mod.rs  spectrogram.rs  structure.rs
rust-app/src-tauri/src/audio/: README.md  loader.rs  mod.rs
rust-app/src-tauri/src/audio_backend/: README.md  decoder.rs  mod.rs
rust-app/src-tauri/src/beat_tracker/: BeatNet.onnx  BeatNet.onnx.data  README.md  inference.rs  mel.rs  mod.rs  post_processor.rs
rust-app/src-tauri/src/broadcasting/: README.md  mod.rs  server.rs  transcoder.rs
rust-app/src-tauri/verification/: README.md  verify_audio.rs  verify_stage2.rs  verify_stage3.rs
rust-app/src/workers/: mist.js  renderer.worker.js
(+57 files in other folders)
