[package]
name = "remixatron"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "remixatron"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "remixatron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
kira = "0.11.0"
ndarray = { version = "0.16.1", features = ["serde"] }
linfa = "0.8.1"
linfa-clustering = "0.8.1"
linfa-nn = "0.8.1"
symphonia = { version = "0.5.5", features = ["mp3", "isomp4", "wav"] }
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "ndarray"] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
rubato = "0.14.1"
rustfft = "6.4.1"
aubio-rs = "0.2.0"
qdft = "0.1.0"
num-complex = "0.4.6"
rand = "0.8.5"
rayon = "1.8"
base64 = "0.22.1"

